# warning_guards

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: warning_guards.h
include/warning_guards/: warning_guards.h
test/: basic_compilation_test.cpp  oldstyle_cast_test.cpp  register_test.cpp
test/third_party_headers/: oldstyle_cast.h  register.h
